fixed nav alignment

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -43,31 +43,16 @@
 
 @media (min-width: 769px) {
   .main-header {
-    height: 200px;
-    /*separation from top sapce to logo*/
     justify-content: flex-end;
   }
   .site-logo {
 /*    width: 140px;*/
   }
   .nav {
-    margin-top: 3em;
     flex-direction: row;
     justify-content: flex-end;
   }
   .nav a {
     border-bottom-color: transparent;
-  }
-}
-
-@media (min-width: 1025px) {
-  .main-header {
-  }
-  .site-logo {
-
-  }
-  .nav li {
-/*    margin-left: .65em;
-    margin-right: .65em;*/
   }
 }
